if(CHCORE_SAMPLE_STATIC)
    if (CHCORE_BUILD_SAMPLE_APPS_APPS)
        add_subdirectory(apps)
    endif()
    if (CHCORE_BUILD_SAMPLE_APPS_UTILS)
        add_subdirectory(utils)
    endif()
    if (CHCORE_BUILD_SAMPLE_APPS_TESTS)
        add_subdirectory(tests)
    endif()
    if (CHCORE_BUILD_SAMPLE_APPS_CPYTHON)
        add_subdirectory(cpython)
    endif()
    chcore_copy_all_targets_to_ramdisk()
endif()
