file(GLOB _sources "*.c")
foreach(_source ${_sources})
    get_filename_component(exename ${_source} NAME_WE)
    add_executable(${exename}.bin ${_source})
    if(CHCORE_USER_STATIC)
        target_link_options(${exename}.bin PRIVATE -static)
        add_dependencies(${exename}.bin libc)
    endif()
    if(${exename} MATCHES "assert")
        target_compile_options(${exename}.bin PRIVATE -g3 -ggdb)
    endif()
endforeach()
