file(GLOB _sources "*.c")
foreach(_source ${_sources})
    get_filename_component(exename ${_source} NAME_WE)
    add_executable(${exename} ${_source})
    if(CHCORE_USER_STATIC)
        target_link_options(${exename} PRIVATE -static)
        add_dependencies(${exename} libc)
    endif()
endforeach()
